[project]
name = "peakoscope-demo"
version = "0.2.1"
description = "Demo of the peakoscope package"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "peakoscope[matplotlib]==1.1.0",
    "streamlit>=1.44.1",
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
  { name="Eivind Tøstesen", email="contact@tostesen.no" },
]

[dependency-groups]
dev = [
    "ruff>=0.11.5",
]
